added rewards page

--- a/src/app/profile/modules/rewards/rewards.component.html
+++ b/src/app/profile/modules/rewards/rewards.component.html
@@ -1,3 +1,218 @@
-<p>
-  rewards works!
-</p>
+<div fxFlex fxLayout="row">
+<div fxFlex fxLayout="column" class="sized">
+  <mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar>
+        <img class="example-header-image" src="../../../../assets/medal.png">
+      </div>
+      <mat-card-title>Beginner</mat-card-title>
+      <mat-card-subtitle>1st Bet</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="../../../../assets/medal.png" alt="Beginner">
+    <mat-card-content>
+      <p>
+        Your first good prognostic. <br>You can now begin your bettor life !
+      </p>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar>
+        <img class="example-header-image" src="../../../../assets/intermediate.png">
+      </div>
+      <mat-card-title>Intermediate</mat-card-title>
+      <mat-card-subtitle>10 correct bets</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="../../../../assets/intermediate.png" alt="Intermediate">
+    <mat-card-content>
+      <p>
+        10 good bets. Quite good, but you can do better
+      </p>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar>
+        <img class="example-header-image" src="../../../../assets/semi-pro.png">
+      </div>
+      <mat-card-title>Semi-pro</mat-card-title>
+      <mat-card-subtitle>20 correct bets</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="../../../../assets/semi-pro.png" alt="Semipro">
+    <mat-card-content>
+      <p>
+        20 is good number. Continue liket that!
+      </p>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar>
+        <img class="example-header-image" src="../../../../assets/pro.png">
+      </div>
+      <mat-card-title>Pro</mat-card-title>
+      <mat-card-subtitle>50 correct bets</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="../../../../assets/pro.png" alt="Pro">
+    <mat-card-content>
+      <p>
+        Wow what an increase. You became a nice bettor!
+      </p>
+    </mat-card-content>
+  </mat-card>
+</div>
+
+<div fxFlex fxLayout="column" class="sized">
+
+  <mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar>
+        <img class="example-header-image" src="../../../../assets/rookie.png">
+      </div>
+      <mat-card-title>Rookie</mat-card-title>
+      <mat-card-subtitle>100 correct bets</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="../../../../assets/rookie.png" alt="Rookie">
+    <mat-card-content>
+      <p>
+        You have scored a century! What an achievement!!
+      </p>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar>
+        <img class="example-header-image" src="../../../../assets/bronze-medal.png">
+      </div>
+      <mat-card-title>Bronze Medal</mat-card-title>
+      <mat-card-subtitle>150 correct bets</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="../../../../assets/bronze-medal.png" alt="BronzeMedal">
+    <mat-card-content>
+      <p>
+        The real game begins now!
+      </p>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar>
+        <img class="example-header-image" src="../../../../assets/silver-medal.png">
+      </div>
+      <mat-card-title>Silver Medal</mat-card-title>
+      <mat-card-subtitle>200 correct bets</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="../../../../assets/silver-medal.png" alt="SilverMedal">
+    <mat-card-content>
+      <p>
+        Double Century! Where will be your limit?
+      </p>
+    </mat-card-content>
+  </mat-card>
+  
+  <mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar>
+        <img class="example-header-image" src="../../../../assets/gold-medal.png">
+      </div>
+      <mat-card-title>Gold Medal</mat-card-title>
+      <mat-card-subtitle>250 correct bets</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="../../../../assets/gold-medal.png" alt="GoldMedal">
+    <mat-card-content>
+      <p>
+        Pretty nice numbers!
+      </p>
+    </mat-card-content>
+  </mat-card>
+</div>
+
+<div fxFlex fxLayout="column" class="sized">
+  
+
+  <mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar>
+        <img class="example-header-image" src="../../../../assets/bronze-trophy.png">
+      </div>
+      <mat-card-title>Bronze Trophy</mat-card-title>
+      <mat-card-subtitle>300 correct bets</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="../../../../assets/bronze-trophy.png" alt="BronzeTrophy">
+    <mat-card-content>
+      <p>
+        Century-Century-Century = 300!!
+      </p>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar>
+        <img class="example-header-image" src="../../../../assets/silver-trophy.png">
+      </div>
+      <mat-card-title>Silver Trophy</mat-card-title>
+      <mat-card-subtitle>350 correct bets</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="../../../../assets/silver-trophy.png" alt="SilverTrophy">
+    <mat-card-content>
+      <p>
+        Bettor Jedi i am! <br>350 bets score i have cumulate
+      </p>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar>
+        <img class="example-header-image" src="../../../../assets/gold-trophy.png">
+      </div>
+      <mat-card-title>Gold Trophy</mat-card-title>
+      <mat-card-subtitle>400 correct bets</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="../../../../assets/gold-trophy.png" alt="GoldTrophy">
+    <mat-card-content>
+      <p>
+        Not anymore a small player. Your are now a master!
+      </p>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar>
+        <img class="example-header-image" src="../../../../assets/winner.png">
+      </div>
+      <mat-card-title>Winner</mat-card-title>
+      <mat-card-subtitle>450 correct bets</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="../../../../assets/winner.png" alt="Winner">
+    <mat-card-content>
+      <p>
+        We can just bow our head down! <br> What an achievement!
+      </p>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar>
+        <img class="example-header-image" src="../../../../assets/champion.png">
+      </div>
+      <mat-card-title>Champion</mat-card-title>
+      <mat-card-subtitle>500 correct bets</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="../../../../assets/champion.png" alt="Champion">
+    <mat-card-content>
+      <p>
+        500?! Where will your talent stop ? Woww
+      </p>
+    </mat-card-content>
+  </mat-card>
+</div>
+</div>
