--- a/src/app/contest/components/navigation/navigation.component.html
+++ b/src/app/contest/components/navigation/navigation.component.html
@@ -1,10 +1,10 @@
 <div fxFlex="1 0 auto" fxLayout="column">
 
   <div fxFlex="300px" fxLayout="column">
-    <div fxFlex="none">
+    <div fxFlex="none" fxLayout="">
       <button mat-stroked-button class="btn-back" routerLink="/">
         <mat-icon>arrow_back</mat-icon>
-        <span [style.marginLeft]="'10px'">Return</span>
+        <span [style.marginLeft]="'10px'">Home</span>
       </button>
     </div>
     <div fxFlex="1 0 auto" fxLayout="column" fxLayoutAlign="center center">
