--- a/src/app/profile/components/background/background.component.html
+++ b/src/app/profile/components/background/background.component.html
@@ -1,4 +1,5 @@
-<div fxFlex="0 0 300px" style="background: #3553e6">
+<div fxFlex="0 0 300px" style="background: #3553e6" class="top">
+  <img src="assets/wave.png">
 </div>
 <div fxFlex="1 0 auto" style="background: #ecf0f5">
 </div>
