--- a/src/app/profile/components/drawer/drawer.component.html
+++ b/src/app/profile/components/drawer/drawer.component.html
@@ -50,10 +50,9 @@
         </mat-card>
       </div>
       <div class="custom-cell" >
-        <mat-card mat-ripple routerLink="favorites" routerLinkActive="active">
+        <mat-card mat-ripple routerLink="pronostics" routerLinkActive="active">
           <mat-icon>save</mat-icon>
           <span>Pronostics</span>
-
         </mat-card>
       </div>
       <div class="custom-cell" >
