--- a/src/app/authentication/components/intro/intro.component.html
+++ b/src/app/authentication/components/intro/intro.component.html
@@ -2,7 +2,7 @@
 
   <div fxFlex="0 0 auto" fxFlexAlign="center"  fxLayout="row" fxLayoutGap="20px">
     <div  *ifOnDom class="logo" [@animate]="{value:'*',params:{duration: '300ms',delay:'200ms',scale:'0.1'}}">
-      <img  src="assets/angular.svg" />
+      <img  src="assets/logo.png" />
     </div>
   </div>
 
