--- a/src/app/authentication/components/intro/intro.component.scss
+++ b/src/app/authentication/components/intro/intro.component.scss
@@ -10,7 +10,7 @@
   }
 
   .logo {
-    width: 320px;
+    width: auto;
     margin-bottom: 32px;
 
     @include media-breakpoint('sm') {
@@ -21,7 +21,7 @@
 
     img{
       max-width: 100%;
-      max-height: 320px;
+      max-height: 450px;
     }
   }
 }
