--- a/src/app/contest/modules/matches/matches.component.scss
+++ b/src/app/contest/modules/matches/matches.component.scss
@@ -55,6 +55,8 @@
         overflow-y: auto;
         a {
           flex: none;
+          display: flex;
+          flex-direction: row;
           padding: 6px;
           border-bottom: 1px solid rgba(0,0,0,0.1);
           text-decoration: none !important;
@@ -63,7 +65,7 @@
           .match-item{
             display: flex;
             flex-direction: row ;
-            width: 100% ;
+            flex: 1;
             justify-content: center;
             align-items: center;
             .team-item{
@@ -141,6 +143,41 @@
 
 
           }
+          .match-prono{
+            display: flex;
+            flex-direction: row ;
+            margin-left: 20px;
+            flex: 0 0 20%;
+            justify-content: center;
+            align-items: center;
+          }
+          ::ng-deep .mat-badge-content{
+            background: #43a047;
+          }
+          .voted-team{
+            border: 1px solid rgba(0,0,0,0.08);
+            padding: 8px;
+            background: white;
+            border-radius: 50%;
+            margin-right: 10px;
+          }
+          .voted-team-name{
+            border: 1px solid rgba(0,0,0,0.08);
+            padding: 8px;
+            background: white;
+            border-radius: 10%;
+            text-transform: uppercase;
+            font-size: 12px;
+          }
+          .unvoted{
+
+            background: white;
+            color: rgba(0,0,0,0.8);
+            border: 1px dashed #f44336;
+            padding: 5px 15px;
+            border-radius: 15px;
+          }
+
         }
         a:last-child{
           border-bottom: none;
