--- a/src/app/profile/modules/favorites/components/lively/lively.component.html
+++ b/src/app/profile/modules/favorites/components/lively/lively.component.html
@@ -13,4 +13,6 @@
   </div>
 </div>
 <div class="panel-cards" fxLayout="column" fxLayoutGap="15px" >
+  <span class="info-empty">
+  No match in progress...</span>
 </div>
