--- a/src/app/profile/modules/favorites/components/past/past.component.html
+++ b/src/app/profile/modules/favorites/components/past/past.component.html
@@ -12,5 +12,8 @@
 
   </div>
 </div>
-<div class="panel-cards" fxLayout="column" fxLayoutGap="15px" >
+<div class="panel-cards" fxLayout="column" fxLayoutGap="15px">
+  <span class="info-empty">
+  Empty bet...
+  </span>
 </div>
