--- a/src/app/profile/modules/favorites/components/upcoming/upcoming.component.html
+++ b/src/app/profile/modules/favorites/components/upcoming/upcoming.component.html
@@ -12,14 +12,14 @@
 
   </div>
 </div>
-<div class="panel-cards" fxLayout="column" fxLayoutGap="15px" >
+<div class="panel-cards" fxLayout="column" fxLayoutGap="15px">
 
   <ng-container *ngFor="let pronostic of pronostics">
     <app-upcoming-card [match]="pronostic.match" [contestId]="pronostic.player.contestId"></app-upcoming-card>
   </ng-container>
   <ng-container *ngIf="pronostics.length == 0">
-    <mat-card>
-      empty
-    </mat-card>
+    <span class="info-empty">
+      No match in progress...
+    </span>
   </ng-container>
 </div>
