--- a/src/app/profile/components/drawer/drawer.component.html
+++ b/src/app/profile/components/drawer/drawer.component.html
@@ -68,6 +68,7 @@
           <span>Notifications</span>
         </mat-card>
       </div>-->
+      <!--
       <div class="custom-cell" >
         <mat-card mat-ripple routerLink="messages" routerLinkActive="active">
 
@@ -80,7 +81,7 @@
           <mat-icon>people</mat-icon>
           <span>Social</span>
         </mat-card>
-      </div>
+      </div>-->
       <div class="custom-cell" >
         <mat-card mat-ripple (click)="logout()">
           <mat-icon>logout</mat-icon>
