--- a/src/app/contest/modules/ranking/ranking.component.scss
+++ b/src/app/contest/modules/ranking/ranking.component.scss
@@ -1,4 +1,11 @@
 :host {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+
   .card {
     margin: 20px 10px;
     position: relative;
@@ -6,7 +13,7 @@
     flex: 1;
     border-radius: 8px;
     flex-direction: column;
-    overflow: hidden;
+    overflow: auto;
     background: white;
     box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
   }
